regression/negative/wrong_index_offset.asm
        device zxspectrum128

        org #8000
        LD   A,(IY—50) ; code 151
